<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dolev.calc.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button"
        android:layout_width="60dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:onClick="onnumberclick"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="57dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"
        android:text="@string/two"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="58dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:text="@string/three"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="57dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="56dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/five"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="55dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/six"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="55dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="53dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/eight"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="58dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/nine"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button10"
        android:layout_width="55dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button11"
        android:layout_width="47dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button12"
        android:layout_width="54dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/clear"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button13"
        android:layout_width="70dp"
        android:layout_height="39dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="72dp"
        android:text="@string/mult"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/division"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button15"
        android:layout_width="74dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/minus"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <Button
        android:id="@+id/button16"
        android:layout_width="78dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/plus"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/button17"
        android:layout_width="158dp"
        android:layout_height="42dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/equal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <EditText
        android:id="@+id/edt"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>


